--- a/WebContent/view/addjob.html
+++ b/WebContent/view/addjob.html
@@ -10,44 +10,44 @@
 <div class="form-group">
     <label class="control-label col-sm-2" for="jobTitle">Job Title:</label>
     <div class="col-sm-7">
-      <input type="text" class="form-control" id="jobTitle" placeholder="Enter Title" ng-model="job.jobTitle">
+      <input type="text" class="form-control" id="jobTitle" placeholder="Enter Title" ng-model="job.jobTitle" required>
     </div>
   </div>
   <div class="form-group">
     <label class="control-label col-sm-2" for="jobDescription">Job Description:</label>
     <div class="col-sm-7">
-      <input type="text" class="form-control" id="jobDescription" placeholder="Enter Description" ng-model="job.jobDescription">
+      <input type="text" class="form-control" id="jobDescription" placeholder="Enter Description" ng-model="job.jobDescription" required>
     </div>
   </div>
   <div class="form-group">
     <label class="control-label col-sm-2" for="skillsRequired">Skills Required:</label>
     <div class="col-sm-7"> 
-      <input type="text" class="form-control" id="skillsRequired" placeholder="Enter skill" ng-model="job.skillsRequired">
+      <input type="text" class="form-control" id="skillsRequired" placeholder="Enter skill" ng-model="job.skillsRequired" required>
     </div>
   </div>
   <div class="form-group">
     <label class="control-label col-sm-2" for="location">Location:</label>
     <div class="col-sm-7"> 
-      <input type="text" class="form-control" id="location" placeholder="Enter location" ng-model="job.location">
+      <input type="text" class="form-control" id="location" placeholder="Enter location" ng-model="job.location" required>
     </div>
   </div>
   <div class="form-group">
     <label class="control-label col-sm-2" for="companyname">Company:</label>
     <div class="col-sm-7"> 
-      <input type="text" class="form-control" id="companyname" placeholder="Enter company" ng-model="job.companyname">
+      <input type="text" class="form-control" id="companyname" placeholder="Enter company" ng-model="job.companyname" required>
     </div>
   </div>
 
   <div class="form-group">
     <label class="control-label col-sm-2" for="salary">Salary:</label>
     <div class="col-sm-7"> 
-      <input type="text" class="form-control" id="salary" placeholder="Enter salary" ng-model="job.salary">
+      <input type="text" class="form-control" id="salary" placeholder="Enter salary" ng-model="job.salary" required>
     </div>
   </div>
   <div class="form-group">
     <label class="control-label col-sm-2" for="yrsOfExp">Experience Years:</label>
     <div class="col-sm-7"> 
-      <input type="text" class="form-control" id="yrsOfExp" placeholder="Enter Years of Experience:" ng-model="job.yrsOfExp">
+      <input type="text" class="form-control" id="yrsOfExp" placeholder="Enter Years of Experience:" ng-model="job.yrsOfExp" required>
     </div>
   </div>
   
