--- a/WebContent/view/registration.html
+++ b/WebContent/view/registration.html
@@ -3,50 +3,49 @@
 <body>
 <div style="color:red" ng-if="error.code==1">{{error.message}}</div>
 
-<form class="form-horizontal">
+<form name="myform" class="form-horizontal">
 
   <div class="form-group">
   <div style="color:red" ng-if="error.code==2">{{error.message}}</div>
     <label class="control-label col-sm-2" for="username">Username:</label>
     <div class="col-sm-7">
-      <input type="text" class="form-control" id="username" placeholder="Enter username" ng-model="user.username">
+      <input type="text" class="form-control" id="username" placeholder="Enter username" ng-model="user.username" required>
     </div>
   </div>
-  <div class="form-group">
+   <div class="form-group">
     <label class="control-label col-sm-2" for="pwd">Password:</label>
     <div class="col-sm-7"> 
-      <input type="password" class="form-control" id="pwd" placeholder="Enter password" ng-model="user.password">
+      <input type="password" class="form-control" id="pwd" placeholder="Enter password" ng-model="user.password" required>
     </div>
   </div>
-  <div class="form-group">
+<div class="form-group">
     <label class="control-label col-sm-2" for="firstname">FirstName:</label>
     <div class="col-sm-7"> 
-      <input type="text" class="form-control" id="firstname" placeholder="Enter firstname" ng-model="user.firstname">
+      <input name="myName" type="text" class="form-control" id="firstname" placeholder="Enter firstname" ng-model="user.firstname" required>
+    <span ng-show="myform.myName.$touched && myform.myName.$invalid">The name is required.</span>
     </div>
   </div>
+  
   <div class="form-group">
     <label class="control-label col-sm-2" for="lastname">LastName:</label>
     <div class="col-sm-7"> 
-      <input type="text" class="form-control" id="lastname" placeholder="Enter lastname" ng-model="user.lastname">
+      <input name="myInput" type="text" class="form-control" id="lastname" placeholder="Enter lastname" ng-model="user.lastname" required>
     </div>
   </div>
-
   <div class="form-group">
 <div style="color:red" ng-if="error.code==3">{{error.message}}</div>
     <label class="control-label col-sm-2" for="email">Emailid:</label>
     <div class="col-sm-7"> 
-      <input type="email" class="form-control" id="email" placeholder="Enter emailid" ng-model="user.email">
+      <input type="email" class="form-control" id="email" placeholder="Enter emailid" ng-model="user.email" required>
     </div>
   </div>
   <div class="form-group">
     <label class="control-label col-sm-2" for="phonenumber">Phonenumber:</label>
     <div class="col-sm-7"> 
-      <input type="text" class="form-control" id="phonenumber" placeholder="Enter phoneno" ng-model="user.phonenumber">
+      <input type="text" class="form-control" id="phonenumber" placeholder="Enter phoneno" ng-model="user.phonenumber" required>
     </div>
   </div>
-  
-  
-  
+   
   <label class="control-label col-sm-2" for="role">Role:</label>
    <div class="col-sm-7">
    <div class="radio">
@@ -61,6 +60,8 @@
     </div>
   </div>
 </form>
+
+
 </body>
 </html>
 
