--- a/WebContent/view/editprofile.html
+++ b/WebContent/view/editprofile.html
@@ -19,19 +19,19 @@
   <div class="form-group">
     <label class="control-label col-sm-2" for="pwd">Password:</label>
     <div class="col-sm-7"> 
-      <input type="password" class="form-control" id="pwd" placeholder="Enter password" ng-model="user.password">
+      <input type="password" class="form-control" id="pwd" placeholder="Enter password" ng-model="user.password" required>
     </div>
   </div>
   <div class="form-group">
     <label class="control-label col-sm-2" for="firstname">FirstName:</label>
     <div class="col-sm-7"> 
-      <input type="text" class="form-control" id="firstname" placeholder="Enter firstname" ng-model="user.firstname">
+      <input type="text" class="form-control" id="firstname" placeholder="Enter firstname" ng-model="user.firstname" required>
     </div>
   </div>
   <div class="form-group">
     <label class="control-label col-sm-2" for="lastname">LastName:</label>
     <div class="col-sm-7"> 
-      <input type="text" class="form-control" id="lastname" placeholder="Enter lastname" ng-model="user.lastname">
+      <input type="text" class="form-control" id="lastname" placeholder="Enter lastname" ng-model="user.lastname" required>
     </div>
   </div>
 
@@ -39,13 +39,13 @@
 <div style="color:red" ng-if="error.code==3">{{error.message}}</div>
     <label class="control-label col-sm-2" for="email">Emailid:</label>
     <div class="col-sm-7"> 
-      <input type="email" class="form-control" id="email" placeholder="Enter emailid" ng-model="user.email">
+      <input type="email" class="form-control" id="email" placeholder="Enter emailid" ng-model="user.email" required>
     </div>
   </div>
   <div class="form-group">
     <label class="control-label col-sm-2" for="phonenumber">Phonenumber:</label>
     <div class="col-sm-7"> 
-      <input type="text" class="form-control" id="phonenumber" placeholder="Enter phoneno" ng-model="user.phonenumber">
+      <input type="text" class="form-control" id="phonenumber" placeholder="Enter phoneno" ng-model="user.phonenumber" required>
     </div>
   </div>
   
