--- a/WebContent/resources/css/mystyle.css
+++ b/WebContent/resources/css/mystyle.css
@@ -1,1 +1,29 @@
 @CHARSET "ISO-8859-1";
+.rw-number-notification{
+	position:absolute;
+	top:-7px;
+	right:-6px;
+	padding: 3px 3px 2px 3px;
+	background-color:red;
+	color:black;
+	font-family:arial;
+	font-weight:bold;
+	font-size:10px;
+	border-radius:4px;
+	box-shadow:1px 1px 1px silver;
+}
+/*
+.rw-number-notification{
+   display:block;
+        position:absolute;
+        background:#E1141E;
+        color:#FFF;
+        font-size:12px;
+        font-weight:normal;
+        padding:1px 3px;
+        margin:-8px 0 0 25px;
+        border-radius:2px;
+        -moz-border-radius:2px; 
+        -webkit-border-radius:2px;
+        z-index:1;
+        }*/
