--- a/WebContent/view/blogs.html
+++ b/WebContent/view/blogs.html
@@ -5,7 +5,7 @@
 <title>Insert title here</title>
 </head>
 <body>
-
+{{error.message}}
 <form class="form-horizontal">
 
   <div class="form-group">
