--- a/WebContent/view/home.html
+++ b/WebContent/view/home.html
@@ -5,6 +5,7 @@
 <title>Insert title here</title>
 </head>
 <body>
-<b>Home Page</b>
+
+<img src="resources/images/back4.jpg" height="450" width="1400">
 </body>
 </html>
