--- a/WebContent/view/home.html
+++ b/WebContent/view/home.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 
-<img src="resources/images/back4.jpg" height="450" width="1400">
+<img src="resources/images/exam1.jpg" height="450" width="1400">
 </body>
 </html>
